syntax = "proto3";

package user;

option go_package = "./gen/user";

import "google/api/annotations.proto";

// UserEntity will generate full CRUD scaffold
message UserEntity {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string created_at = 4;
  string updated_at = 5;
}

// UserDTO for API requests/responses
message UserDTO {
  string name = 1;
  string email = 2;
}

// CreateUserRequest
message CreateUserRequest {
  UserDTO user = 1;
}

// CreateUserResponse
message CreateUserResponse {
  UserEntity user = 1;
}

// GetUserRequest
message GetUserRequest {
  int64 id = 1;
}

// GetUserResponse
message GetUserResponse {
  UserEntity user = 1;
}

// UserService provides user management functionality
service UserService {
  // CreateUser creates a new user
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
    option (google.api.http) = {
      post: "/v1/users"
      body: "*"
    };
  }

  // GetUser retrieves a user by ID
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {
    option (google.api.http) = {
      get: "/v1/users/{id}"
    };
  }
}
